footer bug on mobile fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,7 +71,7 @@ a {
 
   .image-grid__container {
     display: grid;
-    grid-template-rows: minmax(min-content, max-content) minmax(600px, 1fr) 40px;
+    grid-template-rows: 65px 1fr minmax(min-content, max-content);
   }
 }
 @media screen and (min-width: 768px) {
